--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -41,11 +41,16 @@ hi:
         label: निरर्थक
       unstarted:
         label: अभी शुरू नहीं किया गया
-  smooch_bot_message_confirmed: संदेश भेजने के लिए आपका शुक्रिया। जल्द ही हम आपको इसका जवाब भेज रहे हैं।
-  smooch_bot_message_unconfirmed: धन्यवाद, लेकिन हम आपके संदेश को आगे नहीं बढ़ा सकते हैं।
+        description: यह दोषपूर्ण है, जांच के लिए शामिल किया गया है, काम शुरू नहीं हुआ है।
+  smooch_bot_message_confirmed: |-
+      धन्यवाद। आपका सन्देश हमें इन चुनावों के दौरान व्हाट्सएप पर गलत सूचना के प्रचार- प्रसार पर शोध करने में मदद करेगा। इस सामग्री को हमने सत्यापन के लिए शामिल किया है। हम आपको 24 घंटे के भीतर रिपोर्ट देने की कोशिश करेंगे। लेकिन ध्यान रखें- हम आपके हर अनुरोध का जवाब देने में सक्षम नहीं हैं।
+  smooch_bot_message_unconfirmed: चूंकि आपने 1 लिखकर उत्तर नहीं दिया था, इसलिए हम आपके संदेश को आगे नहीं बढ़ा सकते। धन्यवाद।
   smooch_bot_message_type_unsupported: क्षमा करें, सत्यापन के लिए इस तरह के फाइल फार्मेट का हम समर्थन नहीं करते हैं।
   smooch_bot_message_sent: यह संदेश आप हमें पहले ही भेज चुके हैं।
   smooch_bot_meme: आपके द्वारा भेजी गई सामग्री के आधार पर हमने एक मीम तैयार किया है जिसके तथ्यों की जांच के लिए आपने अनुरोध किया था। इसके बारे में और अधिक जानें %{url}
-  smooch_bot_result: आपके द्वारा भेजी गई सामग्री से संबंधित तथ्यों की जांच हमने की है और यह तय किया है कि सामग्री%{status} है। %{url} पर और जानें।
-  smooch_bot_ask_for_confirmation: हमसे जुड़ने के लिए धन्यवाद! कृपया पुष्टि करें कि आप इस सामग्री के तथ्यों की जांच करना चाहते हैं। 'हां' के लिए 1 और 'नहीं' के लिए 2 लिखें।
-  smooch_bot_window_closing: यदि आप अभी भी हमसे संदेश प्राप्त करना चाहते हैं, तो कृपया संपर्क करें! वरना हम क्षमाप्रार्थी हैं।
+  smooch_bot_result: |-
+      सत्यापन रिपोर्ट- आपके द्वारा साथ साझा किया गया संदेश चिह्नित है।%{status}
+      इसे निर्धारित करने के लिए हमने यहां कदम उठाए हैं: %{url}
+  smooch_bot_ask_for_confirmation: |-
+      इस संदेश को भेजने के लिए धन्यवाद। क्या आपको संदेह है कि यह भारतीय आम चुनाव 2019 से संबंधित गलत सूचना है? अगर आप हां करते हैं तो 1 लिखें। कुछ और लिखेंगे तो हम संपर्क जारी नहीं रख सकेंगे।
+  smooch_bot_window_closing: टिपलाइन में अनुरोधों की संख्या बहुत अधिक है और अभी तक आपके अनुरोध का समाधान नहीं कर पाए हैं। सबमिट करने के लिए धन्यवाद। यदि आपके पास सबमिट करने के लिए कोई और संदेश है तो प्रेषित करें।
