--- a/config/locales/ml.yml
+++ b/config/locales/ml.yml
@@ -1,5 +1,19 @@
 ml:
   statuses:
+    ids:
+      verification_status: പരിശോധന
+      translation_status: പരിഭാഷ
+      task_status: ദൌത്യം
+    task:
+      unresolved:
+        label: പരിഹരിക്കാത്തവ
+        description: നടപടിക്രമത്തില്‍, ഇനിയും പരിഹാരമായിട്ടില്ല
+      resolved:
+        label: പരിഹരിച്ചു
+        description: 'ഏല്‍പിച്ച ജോലി പൂര്‍ത്തിയാക്കിയിട്ടുണ്ട് '
+      cant_be_resolved:
+        label: പരിഹരിക്കാനായില്ല
+        description: ആ പ്രശ്നം പരിഹരിക്കാവുന്നതല്ലായിരുന്നു
     media:
       undetermined:
         label: 'തുടങ്ങിയിട്ടില്ല '
@@ -20,7 +34,7 @@ ml:
         label: പരിഗണനയിലാണ്
         description: നടപടിക്രമത്തില്‍. അടുത്ത ഘട്ടത്തിലേക്ക് കടക്കുന്നു. പരിശോധന തുടങ്ങിയിട്ടില്ല
       translated:
-        label: പരിഭാഷപ്പെടുത്തിയിട്ടില്ല
+        label: പരിഭാഷപ്പെടുത്തിയിട്ടുണ്ട്
         description: പരിഭാഷ കഴിഞ്ഞു.വിലയിരുത്തല്‍ കാത്തിരിക്കുന്നു
       ready:
         label: തയ്യാറാണ്
@@ -41,12 +55,101 @@ ml:
         label: ഉപയോഗശൂന്യം
       unstarted:
         label: തുടങ്ങിയിട്ടില്ല
-        description: നടപടിക്രമത്തില്‍. പരിശോധക്കായി ചോര്‍ത്തിട്ടുണ്ട്. പ്രവൃത്തി തുടങ്ങിയിട്ടില്ല
-  smooch_bot_message_confirmed: 'താങ്കളുടെ ആവശ്യം  ഞങ്ങളുടെ പരിഗണനയിലാണ്. താമസിയാതെ മറുപടി നല്‍കാം, നന്ദി. '
-  smooch_bot_message_unconfirmed: താങ്കളുടെ ആവശ്യം പരിഗണിക്കാനാവില്ല, നന്ദി
+        description: നടപടിക്രമത്തില്‍. പരിശോധക്കായി ചേര്‍ത്തിട്ടുണ്ട്. പ്രവൃത്തി തുടങ്ങിയിട്ടില്ല
+    source:
+      undetermined:
+        label: തുടങ്ങിയിട്ടില്ല
+        description: നടപടിക്രമത്തില്‍. പരിശോധക്കായി ചേര്‍ത്തിട്ടുണ്ട്. പ്രവൃത്തി തുടങ്ങിയിട്ടില്ല
+      credible:
+        label: വിശ്വസനീയം
+        description: 'കണ്ടെത്തല്‍ : വിശ്വസനീയമായ ഉറവിടമാണ് '
+      not_credible:
+        label: വിശ്വസനീയമല്ല
+        description: 'കണ്ടെത്തല്‍ : വിശ്വസനീയമായ ഉറവിടമല്ല '
+      slightly_credible:
+        label: ചെറിയ വിശ്വസനീയതയുണ്ട്
+        description: 'കണ്ടെത്തല്‍ : ഉറവിടത്തിന് ചെറിയ തോതിലുള്ള വിശ്വസനീയതയുണ്ട് '
+      sockpuppet:
+        label: 'വ്യാജവിലാസം '
+        description: 'കണ്ടെത്തല്‍ : ഉറവിടം ഒരു വ്യാജവിലാസമാണ് '
+    translation:
+      pending:
+        label: തീര്‍ന്നിട്ടില്ല
+        description: 'നടപടിക്രമത്തില്‍, അടുത്ത് ഘട്ടത്തിലേക്ക് കടക്കുന്നു. '
+      in_progress:
+        label: നടന്നുകൊണ്ടിരിക്കുന്നു
+        description: 'പ്രവൃത്തി തുടങ്ങിയിട്ടുണ്ട്. പരിഭാഷപ്പെടുത്തിയിട്ടില്ല '
+      translated:
+        label: 'പരിഭാഷപ്പെടുത്തിയിട്ടുണ്ട് '
+        description: 'പരിഭാഷ അംഗീകാരത്തിനായി സമര്‍പ്പിച്ചിട്ടുണ്ട് '
+      ready:
+        label: തയ്യാര്‍
+        description: 'പരിഭാഷ പ്രസിദ്ധീകരത്തിനായി അംഗീകരിച്ചിട്ടുണ്ട് '
+      error:
+        label: 'തകരാറ് '
+        description: പരിഭാഷയില്‍ തകരാറ് കണ്ടെത്തി
+  errors:
+    messages:
+      extension_white_list_error: 'ഇപ്രകാരമുള്ളവ സ്വീകാര്യമല്ല 1 %{extension}. ഇവയെല്ലാമാണ് അനുവദനീയമായിട്ടുള്ളത്  2 % {allowed_types}'
+      invalid_size: '1%{min_width} x 2% { min_height} പിക്സലിനും 3% {max_widhth}x 4%{max_height} പിക്സലിനും ഇടയിലായിരിക്കണം ഫയലിന്റെ വലുപ്പം  '
+  activerecord:
+    models:
+      link: 'ലിങ്ക് '
+      claim: അവകാശവാദം
+      uploaded_image: ചിത്രം
+      uploaded_file: ഫയല്‍
+      task: ജോലി
+      comment: നോട്ട്
+      project_media: തരം
+      media: തരം
+      project: പദ്ധതി
+      team: ടീം
+      user: 'ഉപയോക്താവ് '
+      source: 'ഉറവിടം '
+      project_source: ഉറവിടം
+    attributes:
+      tag:
+        data: ടാഗ്
+      uploaded_file:
+        file: ഫയല്‍
+      uploaded_image:
+        file: ചിത്രം
+      team:
+        slug: സ്ലഗ്
+      source:
+        name: പേര്
+      contact:
+        phone: ഫോണ്‍
+      comment:
+        text: നോട്ട്
+      user:
+        reset_password_token: പാസ് വേഡ് ടോക്കണ്‍ മാറ്റുക
+        email: ഇ മെയില്‍
+    errors:
+      models:
+        tag:
+          attributes:
+            data:
+              already_exists: നേരത്തേ നിലവിലുണ്ട്
+        team:
+          attributes:
+            slug:
+              slug_format: വാക്കുകളും സംഖ്യകളും ചെറിയ രേഖാഖണ്ഡങ്ങളും മാത്രമേ സ്വീകരിക്കൂ
+      messages:
+        record_invalid: 'സാധുതാപരിശേധയില്‍ പരാജയപ്പെട്ടു 1%{errors}'
+        improbable_phone: അസാധുവായ നമ്പറാണ്
+  smooch_bot_message_confirmed: |-
+      നന്ദി, താങ്കളുടെ ചോദ്യം ഈ തെരഞ്ഞെടുപ്പു കാലത്ത് പ്രചരിക്കുന്ന വ്യാജവിവരങ്ങളെ കുറിച്ച് WhatsApp നടത്തുന്ന ഗവേഷണത്തെ സഹായിക്കും.
+
+      ഈ വിഷയം മുന്‍ഗണനയനുസരിച്ച് വരിയില്‍ ചേര്‍ത്തിട്ടുണ്ട്. 24 മണിക്കൂറിനകം താങ്കള്‍ക്ക് പരിശോധനാ റിപ്പോര്‍ട്ട് നല്‍കാന്‍ ശ്രമിക്കുന്നതുമാണ്. എന്നാല്‍ എല്ലാ ചോദ്യങ്ങള്‍ക്കും മറുപടി നല്‍കാന്‍ കഴിയില്ലെന്നും അറിയിക്കട്ടെ.
+  smooch_bot_message_unconfirmed: 1 എന്ന് മറുപടി അയക്കാത്തതിനാല്‍ താങ്കളുടെ വിഷയം കൂടുതല്‍  പരിശോധനകള്‍ക്ക് വിധേയമാക്കുന്നതല്ല.
   smooch_bot_message_type_unsupported: ക്ഷമിക്കണം, ഈ ഫോര്‍മാറ്റിലുള്ള ഫയലുകള്‍ പരിശോധനക്കായി സ്വീകരിക്കാന്‍ സാധ്യമല്ല
   smooch_bot_message_sent: താങ്കളിത് നേരത്തെ തന്നെ ഞങ്ങള്‍ക്കയച്ചിട്ടുണ്ട്
-  smooch_bot_meme: താങ്കളയച്ച സന്ദേശമുപയോഗിച്ചുണ്ടാക്കിയ ഈ മീം കണ്ടു നോക്കൂ കൂടുതൽ അറിയാൻ %{url}
-  smooch_bot_result: 'താങ്കളഉടെ ആവശ്യം ഞങ്ങള്‍ വിശദമായ പരിശോധിച്ചു. അത് %{status} ആണെന്ന് കണ്ടെത്താന്‍ കഴിഞ്ഞു. കൂടുതല്‍ വിവരങ്ങള്‍ ഇവിടെ ലഭിക്കും %{url} '
-  smooch_bot_ask_for_confirmation: 'ഞങ്ങളെ ബന്ധപ്പെട്ടതിന് നന്ദി. താങ്കളുടെ ആവശ്യത്തിന്മേല്‍ വസ്തുതാന്വേഷണം നടത്തണോ എന്ന് സ്ഥിരീകരിക്കുക. വേണമെങ്കില്‍ 1 എന്നോ വേണ്ടെങ്കില്‍ 2 എന്നോ മറുപടി അയക്കുക. '
-  smooch_bot_window_closing: 'ഇനിയും ഞങ്ങളില്‍ നിന്ന് വിവരങ്ങള്‍ ലഭിക്കണമെങ്കില്‍ ബന്ധപ്പെടുക. അല്ലാത്ത പക്ഷം ഒന്നും ചെയ്യേണ്ടതില്ല. '
+  smooch_bot_meme: താങ്കളയച്ച വിവരങ്ങള്‍ ഉപയോഗിച്ചുണ്ടാക്കിയ  മീം ആണിത്. ഇതൊന്ന് കണ്ടു നോക്കൂ. കൂടുതൽ വിവരങ്ങള്‍ക്ക് ഇവിടെ നോക്കൂ %{url}
+  smooch_bot_result: |-
+      [പരിശോധനാ റിപ്പോര്‍ട്ട്] താങ്കള്‍ ഞങ്ങളുമായി പങ്കുവച്ച വിഷയം *1%{status}* എന്ന് അടയാളപ്പെടുത്തുന്നു.
+
+      ഇതിനായി താഴെ പറയുന്ന മാര്‍ഗ്ഗമാണ് ഞങ്ങള്‍ അവലംബിച്ചത് 2%{url}
+  smooch_bot_ask_for_confirmation: |-
+      താങ്കളുടെ സന്ദേശത്തിന് നന്ദി. ഇത് 2019ലെ ലോക് സഭാ തെരഞ്ഞെടുപ്പുമായി ബന്ധപ്പെട്ട വ്യാജവിവരമാണെന്ന് സംശയമുണ്ടോ ? ഉണ്ടെങ്കില്‍ 1 എന്ന് മറുപടി അയക്കകുക. ഇല്ലെങ്കില്‍ ഈ സംഭാഷണം ഇവിടെ അവസാനിപ്പിക്കാം.
+  smooch_bot_window_closing: ടിപ് ലൈനിലേക്ക് കിട്ടുന്ന ചോദ്യങ്ങളുടെ എണ്ണം വളരെ വലുതാണ്. താങ്കളുടെ വിഷയത്തിന് ഇതുവരെ പരിഹാരം കാണാനായിട്ടില്ല. എന്നിരുന്നാലും ബന്ധപ്പെട്ടതിന് നന്ദി. മറ്റെന്തെലും വിഷയമുണ്ടെങ്കില്‍ അതും ഉന്നയിക്കൂ.
