--- a/config/locales/te.yml
+++ b/config/locales/te.yml
@@ -3,7 +3,7 @@ te:
     media:
       undetermined:
         label: మొదలవలేదు
-        description: డెఫాల్ట్, ఇప్పుడే Checkకు ఆడ్ చేసాం, పని మొదలవలేదు
+        description: డెఫాల్ట్, ఇప్పుడే Checkకు జొడించాం, పని మొదలవలేదు
       not_applicable:
         label: నిర్ధారింపలేనిది
         description: ఉన్న ఆధారాలతొ నిర్ధారణకు రాలేము
@@ -18,15 +18,15 @@ te:
         description: 'నిర్ధారణ - ఐటెం కంటెంట్ వెరిఫై చేయబడినది '
       pending:
         label: 'పెండింగ్ లొ ఉన్నది '
-        description: డెఫాల్ట్, ఇప్పుడే Bridgeకు ఆడ్ చేసాం, పని మొదలవలేదు
+        description: డెఫాల్ట్, ఇప్పుడే Bridgeకు జొడించాం, పని మొదలవలేదు
       translated:
         label: 'అనువదింపబడినది '
-        description: అనువదింపబడినది, రివ్యు కొరకు వేచిఉన్నాం
+        description: అనువదింపబడినది, రివ్యూ కొరకు వేచిఉన్నాం
       ready:
         label: తయారయినది
         description: అనువాదం రివ్యు చేయబడి, పబ్లిషింగ్ కొరకు అప్రూవ్ అయినది
       error:
-        label: ఎర్రర్
+        label: ఆటంకం
       'false':
         description: 'నిర్ధారణ - ఐటెం కంటెంట్ తప్పు'
       inconclusive:
@@ -36,17 +36,24 @@ te:
       disputed:
         label: వివాదస్పదం
       out_of_scope:
-        label: మా పరిధిలొ లేదు
+        label: పరిధిలొ లేదు
       junk:
         label: అప్రయోజనం
       unstarted:
         label: మొదలవలేదు
-        description: డెఫాల్ట్, ఇప్పుడే Checkకు ఆడ్ చేసాం, పని మొదలవలేదు
-  smooch_bot_message_confirmed: 'ధన్యవాదములు, మాకు మీ అభ్యర్ధన అందినది. మీరు త్వరలొనే మా నుంచి వినగలరు. '
-  smooch_bot_message_unconfirmed: ధన్యవాదములు, మేము మీ అభ్యర్ధనను మరింతగ విష్లేషించలేము.
+        description: డెఫాల్ట్, ఇప్పుడే Checkకు జొడించాం, పని మొదలవలేదు
+  smooch_bot_message_confirmed: |-
+      ధన్యవాదములు. ఈ ఎన్నికల వేల Whats-App లొ తప్పుడు సమాచార వ్యాప్తి పై మేము చెస్తున్న పరిశొధనకు మీ సందేశము ఉపయోగకరం.
+
+      ఈ అంశం ఇప్పుడు మా వెరిఫికేషన్ క్యూ లొ ఉన్నది. మేము 24 గంటలలొ మీకొక రిపొర్ట్ పంపుటకు ప్రయత్నిస్తాము. గమనిక - మేము ప్రతి ఒక్క రిక్వెస్ట్ కు రెస్పాన్స్ ఇవ్వకపొవచ్చు
+  smooch_bot_message_unconfirmed: మీ జవాబు 1 కాదు కాబట్టి, మేము మీ సందేశమును ఇక విశ్లేషించలేము. ధన్యవాదములు.
   smooch_bot_message_type_unsupported: 'మన్నించ్చండి, మేము ఈ విధమైన ఫైల్ ఫొర్మట్ ని ఇప్పుదు సహకరించట్లేదు '
   smooch_bot_message_sent: 'మీరు ఇంతకు ముందు ఈ మెస్సేజ్ ని పంపిఉన్నారు '
-  smooch_bot_meme: "మీరు నిజ నిర్ధారణ కోసం పంపిన అయిటం ఆధారంగ మేము ఈ మేఎం తయారు చేసాము \nవద్ద మరింత తెలుసుకోండి %{url}"
-  smooch_bot_result: మీరు పంపిన విషయము మేము విష్లేషించిన పిదప తెలిసినదేమనగ, ఈ ఐటం - %{status} మరింత సమాచరం కొరకు %{url}
-  smooch_bot_ask_for_confirmation: మమ్మల్ని సంప్రదించినందుకు ధన్యవాదములు. ఈ ఐటం నిజనిర్ధారణ చేయదలిచినచో 1 ని పంపండి, లేదా 2 పంపండి
-  smooch_bot_window_closing: మీరు మా నుంచి సందేశాలు పొందదలిచినచొ, మమ్మల్ని సంప్రదించంది. లేనిచొ ఏమి చేయకండి!
+  smooch_bot_meme: మీరు నిజ నిర్ధారణ కోసం పంపిన అయిటం ఆధారముగా మేము ఈ మేఎం తయారు చేసాము. మరింత సమాచారం కొరకు %{url}
+  smooch_bot_result: |-
+      [వెరిఫికేషన్ రిపొర్ట్] మీరు పంపిన మెసేజ్ %{status}
+
+      మేము ఈ విధముగా ఈ నిర్ధారణకు వచ్చాము :  %{url}
+  smooch_bot_ask_for_confirmation: |-
+      ఈ సందేశము పంపినందుకు ధన్యవాదములు. మీరు దీన్ని 2019 ఎన్నికలకు సంబంధించిన తప్పు వార్త అనుకుంటున్నారా? ఔను అయితే 1 అని జవాబు ఇవ్వగలరు. వేరొక జవాబు ఏదైనా ఈ సంభాషనను అంతం చేయును.
+  smooch_bot_window_closing: టిప్ లైన్ లొ మెసేజులు అధిక సంఖ్య లొ ఉన్నాయి. మేము మీ అభ్యర్ధన ని ఇంకా పరిష్కరించలేదు. సందేశము పంపినందుకు ధన్యవాదములు. మీరు ఇంకొ మెసేజ్ పంపదలిచినచొ దయచేసి పంపండి.
