--- a/config/locales/bn.yml
+++ b/config/locales/bn.yml
@@ -18,7 +18,7 @@ bn:
         description: 'উপসংহার: এই আইটেম এর কন্টেন্ট যাচাই করা হয়েছে'
       pending:
         label: মুলতুবী
-        description: ডিফল্ট, শুধু ব্রিজ যোগ করা হয়েছে, কোন কাজ শুরু হয়েছে
+        description: ডিফল্ট, শুধু সেতু যোগ করা, কোন কাজ শুরু করা হয় নি
       translated:
         label: অনূদিত
         description: অনুবাদ করা হয়েছে, পর্যালোচনার জন্য অপেক্ষা করছে
@@ -42,11 +42,18 @@ bn:
       unstarted:
         label: শুরু করা হয় নি
         description: ডিফল্ট, শুধু চেক করা হয়েছে, কাজ শুরু হয়নি
-  smooch_bot_message_confirmed: ধন্যবাদ, আমরা আপনার অনুরোধ পেয়েছি এবং আপনি আমাদের কাছ থেকে শীঘ্রই শুনতে হবে।
-  smooch_bot_message_unconfirmed: আপনাকে ধন্যবাদ, আপনার বার্তা আর প্রক্রিয়াকরণ করা হবে না।
+  smooch_bot_message_confirmed: |-
+      ধন্যবাদ. আপনার জমা আমাদের এই নির্বাচনের সময় সাহায্য করবে। এই আইটেমটি আমাদের যাচাই সারিতে যোগ করা হয়েছে। 24 ঘণ্টার মধ্যে আমরা আপনাকে একটি প্রতিবেদন  দিতেচেষ্টা করব, তবে দয়া করে মনে রাখবেন যে আমরা প্রতি অনুরোধের প্রতি সাড়া দিতে পারছি না।
+  smooch_bot_message_unconfirmed: যেহেতু আপনি 1 এর সাথে উত্তর দিচ্ছেন না, আমরা আপনার বার্তাটি আর প্রক্রিয়া করব না। ধন্যবাদ.
   smooch_bot_message_type_unsupported: আপনার প্রশ্ন যাচাই করা যাবে না কারণ এটি যাচাইয়ের জন্য একটি বৈধ প্রশ্ন নয়।
   smooch_bot_message_sent: এই বার্তা ইতিমধ্যে আমাদের পাঠানো হয়েছে
   smooch_bot_meme: এখানে আমরা আপনার অনুরোধকৃত আইটেমের ভিত্তিতে তৈরি একটি মেমে যাচাই করেছি। আরো জানুন%{url}
-  smooch_bot_result: আপনি আমাদের যা প্রেরণ করেছেন তা আমরা যাচাই করেছি এবং আইটেমটি %{status}তা নির্ধারণ করেছি। %{url} এ আরও জানুন।
-  smooch_bot_ask_for_confirmation: যোগাযোগ করার জন্য ধন্যবাদ! আপনি এই আইটেমটি যাচাই করতে চান দয়া করে নিশ্চিত করুন। 'হ্যাঁ' এর জন্য 1 পাঠান, 'না' এর জন্য 2 পাঠান।
-  smooch_bot_window_closing: যদি আপনি এখনও আমাদের কাছ থেকে বার্তা পেতে চান, যোগাযোগ করুন! অন্যথা, কিছু না।
+  smooch_bot_result: |-
+      ] আপনি যে বার্তাটি আমাদের সাথে ভাগ করেছেন তা চিহ্নিত হয়েছে %{status}। এখানে এই পদক্ষেপগুলি নির্ণয় করার জন্য আমরা পদক্ষেপ গ্রহণ করেছি:%{url}
+  smooch_bot_ask_for_confirmation: |-
+      এই বার্তা পাঠানোর জন্য আপনাকে ধন্যবাদ
+
+      ২019 সালের ভারতীয় সাধারণ নির্বাচনের সাথে সম্পর্কিত ভুল ধারণাটি কি আপনি সন্দেহ করেন?
+
+      হ্যাঁ বলার জন্য, * 1 * দিয়ে উত্তর দিন। অন্য কোন প্রতিক্রিয়া আমাদের কথোপকথন শেষ হবে।
+  smooch_bot_window_closing: টিপলাইনে অনুরোধগুলির পরিমাণ খুব বেশি, এবং আমরা এখনো আপনার অনুরোধটি সমাধান করতে সক্ষম নই। জমা দেওয়ার জন্য আপনাকে ধন্যবাদ।
