Ticket #7404: Fixing tests and exposing targets and sources ids on relationships mutations

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -601,3 +601,4 @@ en:
   embed_tasks: Tasks
   embed_description: Description
   other_language: Other
+  relationship_item_has_parent: This item is already a child of another item
